dev-psdt: Commented out options override in index file of Cesium visualisation.

--- a/Deploy/stacks/psdt/vis-cesium/index.html
+++ b/Deploy/stacks/psdt/vis-cesium/index.html
@@ -148,12 +148,12 @@
                 // Optionally provide default map settings.
                 // If no options are provided here , any included in the root group of the first stack that responds and loads
                 // will be used (this is unreliable, so if visualising multiple stacks, I recommend using this override). - Michael
-                let optionsOverride = {
+                /*let optionsOverride = {
                     "target": [7.605, 49.196, 750],
                     "heading": 0.0,
                     "pitch": -45,
                     "roll": 0.0
-                };
+                };*/
                 // ===== CUSTOMISABLE =====
 
                 // Initialise the map object
