dev-psdt: Added help icon to Cesium visualisation.

--- a/Deploy/stacks/psdt/vis-cesium/index.html
+++ b/Deploy/stacks/psdt/vis-cesium/index.html
@@ -77,6 +77,14 @@
                     </div>
                 </div>
 
+                <!-- Help icon -->
+                <div id="helpContainer" class="controlBlock expanded" onclick="openHelpURL()">
+                    <div class="tooltip" id="coordEditor">
+                        <i class="fas fa-question fa-lg"></i>
+                        <span class="tooltiptext right">Help</span>
+                    </div>
+                </div>
+
                 <!-- Container for developer info -->
                 <div id="developerContainer" class="controlBlock" style="display: none;">
                     <div class="tooltip" id="coordEditor" style="float: right;">
