dev-virtual-sensor-update: added dome logo in visualisation

--- a/JPS_VIRTUALSENSOR/DispersionVis/index.html
+++ b/JPS_VIRTUALSENSOR/DispersionVis/index.html
@@ -188,6 +188,9 @@
 					<div style="display: flex; justify-content: center;">
 						<img src="./img/ship-legend.png" width="350px"/>
 					</div>
+                    <div style="display: flex; justify-content: center;">
+						<img src="./img/domelogo.png" width="350px"/>
+					</div>
                 `);
                 
                 // Use the local.js file to build the legend
