--- a/web/digital-twin-vis-framework/pylon-visualisation/index.html
+++ b/web/digital-twin-vis-framework/pylon-visualisation/index.html
@@ -145,8 +145,8 @@
 
             // ===== CUSTOMISABLE =====
             // Enter Mapbox account name and API key here!
-			MapHandler.MAP_USER = "cmclinnovations";
-            MapHandler.MAP_API = "pk.eyJ1IjoiY21jbGlubm92YXRpb25zIiwiYSI6ImNsYXR6emxxZTAxa2IzdmxjNGkwbWpmMm8ifQ.rnZii7Uj8qZRYGXAJ4XTaA";
+			MapHandler.MAP_USER = "";
+            MapHandler.MAP_API = "";
             // ===== CUSTOMISABLE =====
 
             // Create a new manager instance
