dev-psdt: Removed 'Innovations' from CMPG branding.

--- a/Deploy/stacks/psdt/vis-cesium/index.html
+++ b/Deploy/stacks/psdt/vis-cesium/index.html
@@ -177,7 +177,7 @@
                     </div>
                 `);
                 
-                manager.getPanelHandler().setFooter("&copy; CMPG Innovations,  " + new Date().getFullYear());
+                manager.getPanelHandler().setFooter("&copy; CMPG,  " + new Date().getFullYear());
                 // ===== CUSTOMISABLE =====
 
                 // Save general tab state as default
